# lminference-fall2025-code

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SCHEDULE.md  pyproject.toml
.github/workflows/: ci.yml
.openhands/: TASKS.md
.openhands/microagents/: repo.md
01-lm-intro/: README.md  llama31_flop_analysis.ipynb  llama31_flop_analysis.py  qwen_completions.ipynb  qwen_completions.py
02-generation-basics/: README.md  generation.ipynb  generation.py  meta_generation.ipynb  meta_generation.py  nanogpt.py  plotting_utils.py  probability.ipynb  probability.py
02-generaton-basics/: generation.ipynb  generation.py  meta_generation.ipynb  meta_generation.py  plotting_utils.py  probability.ipynb  probability.py
final-project/example_code/: README.md  deploy.sh  hit_endpoint.py  starter_example.py
final-project/example_code/eval/: README.md  combined_dataset.jsonl  eval.ipynb  eval.py  get_combined_data.ipynb  grader.py  student_outputs.jsonl
final-project/example_code/eval/eval_results/: test_student_metrics.json  test_student_results.jsonl
final-project/example_code/request/: README.md  batch_arrivals.json  batch_arrivals_sample.json  generate_simulation.py  make_requests.py
homework1/: README.md
homework1/starter_code/: mirostat.py
homework1/writeup/: main.bib  main.tex  vash_hwstyle.sty
homework1/writeup/starter_code/: diverse-beam-search-broken.py  mirostat.py
homework2/: README.md
homework2/addendum-release/: addendum-release-public.ipynb
homework2/basic_deepresearch/: react_agent.py  react_agent.yaml  react_agent_mmlu.yaml  simple_react.ipynb
homework2/basic_deepresearch/mcp_agents/: agent_interface.py  client.py
homework2/basic_deepresearch/mcp_agents/tool_interface/: mcp_tools.py
homework2/self_refine/src/: dataset.py  self_refine.py
homework2/writeup/: main.bib  main.tex  vash_hwstyle.sty
homework3/kv-cache/: benchmark-kv-cache.ipynb  kv-cache-implementation.py  long_prompt.txt
homework3/specdec/: prompts.jsonl  specdec.py
homework3/writeup/: main.bib  main.tex
lm-intro/: llama31_flop_analysis.ipynb  llama31_flop_analysis.py  qwen_completions.ipynb  qwen_completions.py
lm-intro/.openhands/: TASKS.md
